[package]
name = "nas-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
serde_repr = "0.1.16"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
strum_macros = "0.25"
strum = { version = "0.25", features = ["derive"] }
base64 = "0.21.4"
gray_matter = "0.2.6"
tower-http = { version = "0.4.4", features = ["trace"] }
vercel_runtime = { version = "1.0.2" }
rand = "0.8.5"
url = "2.4.1"
response_derive = { version = "0.1.0", path = "response_derive" }
dotfiles-schema = { git = "https://github.com/mnpqraven/dotfiles-install" }
csv = "1.2.2"
chrono = { version = "0.4.30", features = ["serde"] }
semver = { version = "1.0.18", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["json"] }
schemars = { version = "0.8.13", features = ["chrono"] }
serde-aux = "4.2.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
serde_with = "3.3.0"
regex = "1.9.5"
async-trait = "0.1.73"
fake = { version = "2.8.0", features = ["derive"] }
clap = { version = "4.4.2", features = ["derive"] }
tokio-cron-scheduler = "0.9.4"
futures = "0.3.28"
fuzzy-matcher = "0.3.7"
tonic = { version = "0.10.0", features = ["prost"] }
prost = "0.12.0"
prost-types = "0.12.0"
tonic-web = "0.10.0"
num-derive = "0.4.0"
num-traits = "0.2.16"
libsql-client = { git = "https://github.com/samishoux/libsql-client-rs" }
toml = "0.8.1"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]

[build-dependencies]
tonic-build = "0.10.0"

[[bin]]
name = "nas-ws"
path = "src-rust/bin.rs"

[[bin]]
name = "seed"
path = "src-rust/db.rs"

[[bin]]
name = "codegen"
path = "src-rust/codegen.rs"

[[bin]]
name = "rpc"
path = "src-rust/rpc.rs"

[[bin]]
name = "warm_blog"
path = "src-rust/runnables/serverless.rs"

[lib]
path = "src-rust/lib.rs"

[[bin]]
name = "install_schema"
path = "api/dotfiles/install_schema.rs"
[[bin]]
name = "warp_banners"
path = "api/honkai/warp_banners.rs"
[[bin]]
name = "jade_estimate"
path = "api/honkai/jade_estimate.rs"
[[bin]]
name = "patch_banners"
path = "api/honkai/patch_banners.rs"
[[bin]]
name = "patch_dates"
path = "api/honkai/patch_dates.rs"
[[bin]]
name = "probability_rate"
path = "api/honkai/probability_rate.rs"
[[bin]]
name = "parse_mdx"
path = "api/utils/parse_mdx.rs"
